# Trabalho_Final_Compiladores1_2025-02

./: .gitignore  LICENSE  README.md  compilador  devenv.nix  index.html  justfile  lex.yy.c  parser.tab.c  parser.tab.h
.github/: deploy.yml
.github/workflows/: test_pull_request.yaml  test_push.yaml
docs/: mkdocs.yml
docs/docs/: index.md
interpretador/: CMakeLists.txt  lex.yy.c  parser.tab.c  parser.tab.h
interpretador/glossarioTermos/: index.html
interpretador/include/: ast.h  ast_nodes.h  ast_rules.h  error.h  meta.h  rules_var.h  scope.h  utils.h  var.h
interpretador/lexer/: lexer.l
interpretador/lib/: ast.c  ast_nodes.c  ast_rules.c  error.c  meta.c  rules_var.c  scope.c  utils.c  var.c
interpretador/parser/: parser.y
interpretador/test/: common.py  test_1_var.py  test_2_expr.py  test_3_scopes.py  test_4_if_else.py  test_var.py
interpretador/test/cases/expr/: exprs.c  exprs_with_vars.c  long_operation.c  unknown_operation.c  unknown_symbol.c
interpretador/test/cases/if_else/: complex_if.c  else_if.c  if_else.c  invalid_if.c  nested_if.c  simple_if.c  simple_if_false.c  simple_if_true.c
interpretador/test/cases/loops/: do_while.c  no_block.c  while.c
interpretador/test/cases/scopes/: out_of_scope_var.c  simple_scope.c  stacked_scopes.c
interpretador/test/cases/var/: unknown_var.c  unknown_var_type.c  var_decl.c  var_update.c  var_value_char.c  var_value_double.c  var_value_float.c  var_value_int.c
interpretador/test/var/: unknown_var.c  var_decl.c  var_update.c
lexer/: lexer.l
parser/: parser.y
test/: run_tests.py
(+28 files in other folders)
